--- a/hotdorro.html
+++ b/hotdorro.html
@@ -36,6 +36,7 @@ font-size:25px;
 }
 				
 </style>
+<link rel="icon" href="favicon.ico">
 </head>
 <body>
 <p align="right"><a id="tiktik" href="hotdorrotj.html">TJK</a></p>
