--- a/resta.html
+++ b/resta.html
@@ -32,6 +32,7 @@ p{
 font-size:20px;
 }				
 </style>
+<link rel="icon" href="favicon.ico">
 </head>
 <body>
 <p align="right"><a id="ttak" href="restatj.html">TJK</a></p>
