--- a/hotmakhsus.html
+++ b/hotmakhsus.html
@@ -36,6 +36,7 @@ font-size:25px;
 }
 				
 </style>
+<link rel="icon" href="favicon.ico">s
 </head>
 <body>
 <p align="right"><a id="tiktik" href="hotmakhsustj.html">TJK</a></p>
