--- a/fitnes.html
+++ b/fitnes.html
@@ -45,9 +45,8 @@ font-size:20px;
 <td><a href="index.html">MAIN</a></td>
 <td><a href="hotel.html">HOTELS</a></td>
 <td><a href="resta.html">RESTAURANS</a></td>
-<td><a href="fitnes.html">FITNESS CENTERS</a></td>
 <td><a href="sight.html">SIGHTS</a></td>
-<td><a href="author.html">AUTHOR</a></td>
+<td><a href="other.html">OTHER</a></td>
 </table><br><br><br>
 
 <h3 align="center">Here is the list of fitness centers</h3>
