--- a/indextj.html
+++ b/indextj.html
@@ -138,7 +138,7 @@ a:active {
     <p align="left" class="style2"><a href="othertj.html">ДИГАР</a></p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="left" class="style2">&nbsp;</p>
-    <p align="center" class="style2"><img src="banner1.gif" width="200" height="350" title="Tajikistan" align="center"></p>
+    <p align="center" class="style2">
   <!-- end #sidebar1 --></div>
   <div id="mainContent">
     <h3 align="center" class="style6">Мақсади лоиҳа</h3>
@@ -152,7 +152,7 @@ a:active {
   <!-- end #mainContent --></div>
   <!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
   <div id="footer"><br>
-   <p align="center"><img src="botbanner.gif" title="Tajikistan" width="974" height="97" align="center"></p><br>
+   <p align="center">
   <!-- end #footer --></div>
 <!-- end #container --></div>
 </body>
