--- a/hotMMKATAC.html
+++ b/hotMMKATAC.html
@@ -49,9 +49,8 @@ font-size:25px;
 <td><a href="index.html">MAIN</a></td>
 <td><a href="hotel.html">HOTELS</a></td>
 <td><a href="resta.html">RESTAURANS</a></td>
-<td><a href="fitnes.html">FITNESS CENTERS</a></td>
 <td><a href="sight.html">SIGHTS</a></td>
-<td><a href="author.html">AUTHOR</a></td>
+<td><a href="other.html">OTHER</a></td>
 </table><br><br><br>
 <h3 align="center">Guesthouse "MMK ATAC"</h3>
 <table align="right" border="4" cellspacing="9" cellpadding="9">
