--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a:active {
     <p align="left" class="style2"><a href="other.html">Other</a></p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="left" class="style2">&nbsp;</p>
-    <p align="center" class="style2"><img src="banner1.gif" width="200" height="350" title="Tajikistan" align="center"></p>
+    <p align="center" class="style2">
   <!-- end #sidebar1 --></div>
   <div id="mainContent">
     <h1 align="center" class="style3"> Project purpose</h1>
@@ -143,7 +143,7 @@ a:active {
   <!-- end #mainContent --></div>
 	<!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
   <div id="footer"><br>
-    <p align="center"><img src="botbanner.gif" title="Tajikistan" width="800" height="90"></p><br>
+<p align="center"><br>
   <!-- end #footer --></div>
 <!-- end #container --></div>
 </body>
