--- a/indextj.html
+++ b/indextj.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ХИЗМАТРАСОНИҲОИ КӮЛОБ</title>
+<title>КӮЛОБ СЕРВИС</title>
 <style type="text/css"> 
 <!-- 
 body  {
@@ -127,7 +127,7 @@ a:active {
 
 <div id="container"> 
   <div id="header">
-    <h1 align="center" class="style9">ХИЗМАТРАСОНИҲОИ КӮЛОБ</h1>
+    <h1 align="center" class="style9">КӮЛОБ СЕРВИС</h1>
     <p align="right"><a href="index.html">ENG</a></p>
   <!-- end #header --></div>
   <div id="sidebar1">
@@ -144,7 +144,7 @@ a:active {
     <h3 align="center" class="style6">Мақсади лоиҳа</h3>
     <p align="left" class="style5">Агар шумо сайёҳ ҳастед, ки ба Кӯлоб аввалин маротиба омадаед ё як шаҳрванди оддӣ, ки мехоҳед   ин шом дар дигар ҷой хуроки шом хуред, ин сайт барои шумост. Боз дар ин сайт шумо метавонед меҳмонхонаи ба   шумо мувофиқро бо нархҳои дастрас ва шароитҳои арзанда ёбед. Бо ёрии ин сайт шумо метавонед ба ягон ҷо сафар   накарда нархҳо, шароитҳо ва расмҳои ин ё он мавзеро ёбед.</p>
     <p align="left">&nbsp;</p>
-    <h3 align="center" class="style4">ҶОЙҲОИ МАШҲУРТАРИН</h3>
+    <h3 align="center" class="style4">ҶОЙҲОИ МАШҲУР</h3>
     <p align="center"> <a href="hotel1tj.html"><img src="440.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
     <a href="resta1tj.html"><img src="1.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
    <a href="sight1tj.html"><img src="3.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
