announce, resistaravshan, vacancy
added and updated

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>KULOB-SERVICE</title>
+<title>KULOB SERVICE</title>
 <style type="text/css"> 
 <!-- 
 body  {
@@ -119,13 +119,15 @@ a:active {
 
 <div id="container"> 
   <div id="header">
-    <h1 align="center" class="style1">Kulob-Service</h1><p align="right"><a href="indextj.html">TJK</a></p>
+    <h1 align="center" class="style1">KULOB SERVICE</h1><p align="right"><a href="indextj.html">TJK</a></p>
   <!-- end #header --></div>
   <div id="sidebar1">
     <p align="left" class="style2"><a href="index.html">Main</a></p>
     <p align="left" class="style2"><a href="hotel.html">Hotels</a></p>
     <p align="left" class="style2"><a href="resta.html">Restaurants</a></p>
     <p align="left" class="style2"><a href="sight.html">Sights</a></p>
+        <p align="left" class="style2"><a href="announce.html">Announcements</a></p>
+    <p align="left" class="style2"><a href="vacancy.html">Vacancies</a></p>
     <p align="left" class="style2"><a href="other.html">Other</a></p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="left" class="style2">&nbsp;</p>
