--- a/indextj.html
+++ b/indextj.html
@@ -131,11 +131,13 @@ a:active {
     <p align="right"><a href="index.html">ENG</a></p>
   <!-- end #header --></div>
   <div id="sidebar1">
-    <p align="left" class="style2"><a href="indextj.html">АСОСИ</a><a href="indextj.html"></a></p>
-    <p align="left" class="style2"><a href="hoteltj.html" class="style7">МЕҲМОНХОНАҲО</a></p>
+    <p align="left" class="style2"><a href="indextj.html">АСОСӢ</a></p>
+    <p align="left" class="style2"><a href="hoteltj.html">МЕҲМОНХОНАҲО</a></p>
     <p align="left" class="style2"><a href="restatj.html">ТАРАБХОНАҲО</a></p>
     <p align="left" class="style2"><a href="sighttj.html">ҶОЙҲОИ ТАМОШОБОБ</a></p>
-    <p align="left" class="style2"><a href="othertj.html">ДИГАР</a></p>
+    <p align="left" class="style2"><a href="announcetj.html">ЭЪЛОНҲО</a></p>
+    <p align="left" class="style2"><a href="vacancytj.html">ҶОЙИ КОРИ ХОЛӢ</a></p>
+    <p align="left" class="style2"><a href="othertj.html">Дигар</a></p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="center" class="style2">
