--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@ a:active {
     <p align="center" class="style2">
   <!-- end #sidebar1 --></div>
   <div id="mainContent">
-    <h1 align="center" class="style3"> Project purpose</h1>
-    <p align="left" class="style5">If you are a tourist who has come to Kulob for the first time or   a ordinary citizen who wants to eat this evening in a different place, this site   is for you. Again in this site, you can find suitable hotels at affordable   prices and conditions. With the help of this site, you can find prices,   conditions, and pictures of this locations without having to go anywhere.</p>
+    <p align="left" class="style5><b>Kulob Service</b> is the only one of its kind. It's <b>Kulob city</b>'s guide to hotels, restaurants, city sights and etc... And all of them with there photoes. For the first this website is assigned for those persons who came or want to came to Kulob for the fist time.</p>
     <p align="left">&nbsp;</p>
     <h2 align="center" class="style4">Popular places </h2>
-  <p align="center"> <a href="hotel1.html"><img src="440.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
-    <a href="resta1.html"><img src="1.jpg" title="" border="1" width="200" height="150"></a>
-   <a href="sight1.html"><img src="3.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
-   <a href="other1.html"><img src="mplog.jpg" title="" border="1" width="200" height="150"></a> </p>
+  <p align="center">
+      <a href="hotel1.html"><img src="440.jpg" title="" border="1" width="200" height="150"></a>
+      <a href="resta1.html"><img src="1.jpg" title="" border="1" width="200" height="150"></a>
+      <a href="sight1.html"><img src="3.jpg" title="" border="1" width="200" height="150"></a>
+</p>
   <!-- end #mainContent --></div>
 	<!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
   <div id="footer"><br>
