--- a/indextj.html
+++ b/indextj.html
@@ -143,14 +143,14 @@ a:active {
     <p align="center" class="style2">
   <!-- end #sidebar1 --></div>
   <div id="mainContent">
-    <h3 align="center" class="style6">Мақсади лоиҳа</h3>
-    <p align="left" class="style5">Агар шумо сайёҳ ҳастед, ки ба Кӯлоб аввалин маротиба омадаед ё як шаҳрванди оддӣ, ки мехоҳед   ин шом дар дигар ҷой хуроки шом хуред, ин сайт барои шумост. Боз дар ин сайт шумо метавонед меҳмонхонаи ба   шумо мувофиқро бо нархҳои дастрас ва шароитҳои арзанда ёбед. Бо ёрии ин сайт шумо метавонед ба ягон ҷо сафар   накарда нархҳо, шароитҳо ва расмҳои ин ё он мавзеро ёбед.</p>
+    <p align="left" class="style5"></p>
     <p align="left">&nbsp;</p>
     <h3 align="center" class="style4">ҶОЙҲОИ МАШҲУР</h3>
-    <p align="center"> <a href="hotel1tj.html"><img src="440.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
-    <a href="resta1tj.html"><img src="1.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
-   <a href="sight1tj.html"><img src="3.jpg" title="" border="1" width="200" height="150"></a>&nbsp;
-   <a href="other1tj.html"><img src="mplog.jpg" title="" border="1" width="200" height="150"></a> &nbsp;</p>
+    <p align="center">
+    <a href="hotel1tj.html"><img src="440.jpg" border="1" width="200" height="150"></a>
+    <a href="resta1tj.html"><img src="1.jpg" border="1" width="200" height="150"></a>
+    <a href="sight1tj.html"><img src="3.jpg" border="1" width="200" height="150"></a>
+   </p>
   <!-- end #mainContent --></div>
   <!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
   <div id="footer"><br>
