--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@ a:hover {
 a:active {
 	text-decoration: none;
 }
+#qalahead{
+color:red;
+font-size:30px;
+}
+#qalaimg{
+border-color:blue;
+}
+#qala{
+font-size:20px;
+
+}
 .style3 {
 	font-size: 30px;
 	color: #0033FF;
@@ -109,6 +120,7 @@ a:active {
 	font-size: 18px;
 	color: #000066;
 }
+
 
 --> 
 </style>
@@ -138,8 +150,40 @@ a:active {
   <p align="center">
       <a href="hotel1.html"><img src="440.jpg" title="" border="1" width="200" height="150"></a>
       <a href="resta1.html"><img src="1.jpg" title="" border="1" width="200" height="150"></a>
-      <a href="sight1.html"><img src="3.jpg" title="" border="1" width="200" height="150"></a>
+      <a href="mirsaid.html"><img src="3.jpg" title="" border="1" width="200" height="150"></a>
 </p>
+<br><br><br><br>
+
+<div align="center" border="1">
+<p id="qalahead">2700 years of Kulob city</p>
+
+<p id="qala">This memory was build in 2005, when Kulob became 2700 years old. It's located in the center of the city.</p>
+
+<img src="qala.jpg" width="350" height="200" id="qalaimg" border="2" title="2700 years of Kulob">
+<img src="qala2.jpg" width="350" height="200" id="qalaimg" border="2" title="2700 years of Kulob">
+<br>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- end #mainContent --></div>
 	<!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
   <div id="footer"><br>
