--- a/indextj.html
+++ b/indextj.html
@@ -101,6 +101,17 @@ a:active {
 	font-size: 18px;
 	color: #000066;
 }
+#qalahead{
+color:red;
+font-size:30px;
+}
+#qalaimg{
+border-color:blue;
+}
+#qala{
+font-size:20px;
+
+}
 
 --> 
 </style>
@@ -121,6 +132,7 @@ a:active {
 }
 -->
 </style>
+<link rel="icon" href="favicon.ico">
 </head>
 
 <body class="twoColLiqLtHdr">
@@ -131,10 +143,10 @@ a:active {
     <p align="right"><a href="index.html">ENG</a></p>
   <!-- end #header --></div>
   <div id="sidebar1">
-    <p align="left" class="style2"><a href="indextj.html">АСОСӢ</a></p>
-    <p align="left" class="style2"><a href="hoteltj.html">МЕҲМОНХОНАҲО</a></p>
-    <p align="left" class="style2"><a href="restatj.html">ТАРАБХОНАҲО</a></p>
-    <p align="left" class="style2"><a href="sighttj.html">ҶОЙҲОИ ТАМОШОБОБ</a></p>
+   <p align="left" class="style2"><a href="indextj.html">Асосӣ</a></p>
+    <p align="left" class="style2"><a href="hoteltj.html">Меҳмонхонаҳо</a></p>
+    <p align="left" class="style2"><a href="restatj.html">Чойхонаю тарабхонаҳо</a></p>
+    <p align="left" class="style2"><a href="sighttj.html">Ҷойҳои тамошобоб</a></p>
     <p align="left" class="style2"><a href="othertj.html">Дигар</a></p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="left" class="style2">&nbsp;</p>
@@ -143,14 +155,39 @@ a:active {
   <div id="mainContent">
     <p align="left" class="style5"></p>
     <p align="left">&nbsp;</p>
-    <h3 align="center" class="style4">ҶОЙҲОИ МАШҲУР</h3>
+    <h2 align="center" class="style4">Ҷойҳои машҳур</h2>
     <p align="center">
     <a href="hotel1tj.html"><img src="440.jpg" border="1" width="200" height="150"></a>
     <a href="resta1tj.html"><img src="1.jpg" border="1" width="200" height="150"></a>
-    <a href="sight1tj.html"><img src="3.jpg" border="1" width="200" height="150"></a>
+    <a href="mirsaidtj.html"><img src="3.jpg" border="1" width="200" height="150"></a>
    </p>
-  <!-- end #mainContent --></div>
-  <!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
+<br><br><br><br>
+
+<div align="center">
+<p id="qalahead">2700 Солагии шаҳри Кӯлоб</p>
+<p id="qala">Ин қалъа соли 2005 ба хотири 2700 сола шудани шаҳри Кӯлоб сохта шудааст. Он дар маркази шаҳр воқеъ гардидааст.</p>
+<img src="qala.jpg" width="350" height="200" id="qalaimg" border="2" title="2700 Солагии Кӯлоб">
+<img src="qala2.jpg" width="350" height="200" id="qalaimg" border="2" title="2700 Солагии Кӯлоб">
+<br><br>
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </div>
+  <br class="clearfloat" />
   <div id="footer"><br>
    <p align="center">
   <!-- end #footer --></div>
