--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="description" content="This site is for tourists who want to visit Kulob city. Here you can get info about hotels, restaurants and sights of Kulob city. View all hotel pictures and make the acquaimtance of its conditions and prices.">
+<meta name="keywords" content="Kulob Service, Kulob city, Hotels in Kulob, Restaurants in Kulob, Kulob sights, tourist in Kulob">
 <title>KULOB SERVICE</title>
 <style type="text/css"> 
-<!-- 
+ 
 body  {
 	font: 100% Verdana, Arial, Helvetica, sans-serif;
 	background: #666666;
@@ -122,7 +124,7 @@ font-size:20px;
 }
 
 
---> 
+ 
 </style>
 <link rel="icon" href="favicon.ico">
 </head>
