--- a/indextj.html
+++ b/indextj.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="description" content="Ин вебсайт барои сайёҳони хориҷӣ мебошад, ки ба шаҳри Кӯлоб омадаанд. Дар инҷо шумо метавонед дар бораи меҳмонхонаҳо, чойхонаю тарабхонаҳо ва ҷойҳои тамошобоби шаҳри Кӯлоб маълумот пайдо кунед. Расмҳои ҳамаи меҳмонхонаҳо ва чойхонаҳо бо шароитҳо ва нархномаҳо инҷо мавҷуд аст.">
+<meta name="keywords" content="Кӯлоб Сервис, Кулоб Сервис, шаҳри Кӯлоб, меҳмонхона дар Кӯлоб, чойхонаю тарабхона дар Кӯлоб, Ҷойҳои тамошобоб дар Кӯлоб">
 <title>КӮЛОБ СЕРВИС</title>
 <style type="text/css"> 
 <!-- 
