--- a/404.html
+++ b/404.html
@@ -138,11 +138,11 @@ font-size:20px;
     <h1 align="center" class="style1">КӮЛОБ СЕРВИС</h1>
   <!-- end #header --></div>
   <div id="sidebar1">
-   <p align="left" class="style2"><a href="indextj.html">Асосӣ</a></p>
-    <p align="left" class="style2"><a href="hoteltj.html">Меҳмонхонаҳо</a></p>
-    <p align="left" class="style2"><a href="restatj.html">Чойхонаю тарабхонаҳо</a></p>
-    <p align="left" class="style2"><a href="sighttj.html">Ҷойҳои тамошобоб</a></p>
-    <p align="left" class="style2"><a href="othertj.html">Дигар</a></p>
+   <p align="left" class="style2"><a href="index.html">Асосӣ</a></p>
+    <p align="left" class="style2"><a href="hotel.html">Меҳмонхонаҳо</a></p>
+    <p align="left" class="style2"><a href="resta.html">Чойхонаю тарабхонаҳо</a></p>
+    <p align="left" class="style2"><a href="sight.html">Ҷойҳои тамошобоб</a></p>
+    <p align="left" class="style2"><a href="portfolio.html">Дигар</a></p>
     <p align="left" class="style2">&nbsp;</p>
     <p align="left" class="style2">&nbsp;</p>
   <!-- end #sidebar1 --></div>
