--- a/guest1.html
+++ b/guest1.html
@@ -66,7 +66,9 @@ background-color:silver;
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="menu-active"><a href="hotel.html">Hotel</a></li>
+          <li><a href="resta.html">Restaurant</a></li>
+          <li><a href="sight.html">Sight</a></li>
           <li><a href="mp_company.html">MP Conpany</a></li> 
 
 
@@ -74,8 +76,7 @@ background-color:silver;
               <li class="menu-has-children"><a href="#">Language</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Russian</a></li>
-                  <li><a href="#">Tajik</a></li>
+                  <li><a href="#">Тоҷикӣ</a></li>
                 </ul>  </li>
         </ul>
       </nav><!-- #nav-menu-container -->
