--- a/hotel.html
+++ b/hotel.html
@@ -28,6 +28,9 @@
   color:GREEN;
 background-color:silver;
 }
+#pr{
+background-color:gray;
+}
   </style>
   <!-- =======================================================
     Theme Name: Kulob Service
@@ -52,14 +55,15 @@ background-color:silver;
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="menu-active"><a href="hotel.html">Hotel</a></li>
+          <li><a href="resta.html">Restaurant</a></li>
+          <li><a href="sight.html">Sight</a></li>
           <li><a href="mp_company.html">MP Conpany</a></li>
 
               <li class="menu-has-children"><a href="#">Language</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Russian</a></li>
-                  <li><a href="#">Tajik</a></li>
+                  <li><a href="hoteltj.html">Тоҷикӣ</a></li>
                 </ul>
               </li>
               </ul>
@@ -70,35 +74,10 @@ background-color:silver;
   <!--==========================
     Hero Section
   ============================-->
-  <section id="hero">
-    <div class="hero-container">
-      <h1>Hotels</h1>
-      <h2>Let's find the best hotel!</h2>
-      <a href="#about" class="btn-get-started">Start</a>
-    </div>
-  </section><!-- #hero -->
+
 
   <main id="main">
-
-    <!--==========================
-      About Us Section
-    ============================-->
-    <section id="about">
-      <div class="container">
-        <div class="row about-container">
-
-          <div class="col-lg-6 content order-lg-1 order-2">
-            <h2 class="title">Let's find the best hotel.</h2>
-            <p>
-              This site is the best for finding hotel. Prices and pictures are present, so you can choose the best one which you want.
-            </p>            
-          </div>
-
-          <div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
-        </div>
-
-      </div>
-    </section><!-- #about -->
+        <p id="pr"><br><br><br><br><br><br></p>
 
           <!--==========================
       Portfolio Section
@@ -106,7 +85,7 @@ background-color:silver;
     <section id="portfolio">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Portfolio</h3>
+          <h3 class="section-title">Hotels & Guesthouses</h3>
        <!--   <p class="section-description">Here are most popular places.</p> --><br>
         </div>
         <div class="row">
@@ -197,6 +176,25 @@ background-color:silver;
 
       </div>
     </section><!-- #portfolio -->
+              <!--==========================
+      About Us Section
+    ============================-->
+    <section id="about">
+      <div class="container">
+        <div class="row about-container">
+
+          <div class="col-lg-6 content order-lg-1 order-2">
+            <h2 class="title">Let's find the best hotel.</h2>
+            <p>
+              This site is the best for finding hotel. Prices and pictures are present, so you can choose the best one which you want.
+            </p>
+          </div>
+
+          <div class="col-lg-6 background order-lg-2 order-1 wow fadeInRight"></div>
+        </div>
+
+      </div>
+    </section><!-- #about -->
 
     
   </main>
