--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ background-color:silver;
   <!-- =======================================================
     Theme Name: Kulob Service
     Theme URL: https://kulob-service.github.io
-    Author: MP Company & Regna
+    Author: MP Company
     All rights reserved!
   ======================================================= -->
 </head>
@@ -51,15 +51,16 @@ background-color:silver;
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="hotel.html">Hotel</a></li>
+          <li><a href="resta.html">Restaurant</a></li>
+          <li><a href="sight.html">Sight</a></li>
           <li><a href="mp_company.html">MP Conpany</a></li>
 
 
               <li class="menu-has-children"><a href="#">Language</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Russian</a></li>
-                  <li><a href="#">Tajik</a></li>
+                  <li><a href="indextj.html">Тоҷикӣ</a></li>
                 </ul>
               </li>
               </ul>
@@ -91,24 +92,26 @@ background-color:silver;
             <h2 class="title">Few Words About Us</h2>
             <p>
               <b>Kulob Service</b> is local-search tool. Here Hotels & guesthoses, restarants & coffees, city sights & other touristic places are presented.
+            <br>  <br>
+             The <b>2019</b> year is about <b>development of villages and tourism</b>, so for sure this website would probably help to the country's purposes.
             </p>
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title">Save time and money!</h4>
-              <p class="description">Save your time and choose in which hotel you will stay before coming to city. You can view real prices for hotel or other  place where you want to go.</p>
+              <h4 class="title">Save time and money</h4>
+              <p class="description">Save your time and choose the best hotel before coming to the city. You would be introduced with real prices. Look for your ideal one</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title">Images</h4>
+              <h4 class="title">View all</h4>
               <p class="description">All places that are listed in website are presented with their pictures.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title">Only of its kind!</h4>
-              <p class="description">Kulob-Service is the only one of its kind in Tajnet. The 2018y. is mostly consantrated for national hunar and tourism, so for sure this website would be very usefull.</p>
+              <h4 class="title">Unique</h4>
+              <p class="description">This website is the only one of its kind in Tajnet.</p>
             </div>
 
           </div>
