--- a/mp_company.html
+++ b/mp_company.html
@@ -68,16 +68,17 @@ background-color:silver;
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="hotel.html">Hotel</a></li>
+          <li><a href="resta.html">Restaurant</a></li>
+          <li><a href="sight.html">Sight</a></li>
           <li class="menu-active"><a href="mp_company.html">MP Conpany</a></li>
 
 
 
               <li class="menu-has-children"><a href="#">Language</a>
                 <ul>
-                  <li id="eng"><a href="index.html">English</a></li>
-                  <li><a href="#">Russian</a></li>
-                  <li><a href="#">Tajik</a></li>
+                  <li id="eng"><a href="#">English</a></li>
+                  <li><a href="#">Тоҷикӣ</a></li>
                 </ul>
               </li>
               </ul>
@@ -102,20 +103,20 @@ background-color:silver;
                 <h2><a href="#">Let's trip together!</a></h2>
         </footer>
         <article align="center">
-            <p>It is an IT company that mainly works with websites. We work absolutly for progression of country tourism sphere.<br>
-            Publishing hotels and restaurants is free. The company is developing, it belongs to mr. Alimov Kamoliddin - student<br>
-            of "Lyceum for gifted students" in Bokhtar city. We will update information and add new ones as soon as we can.</p>
+            <p>We are an IT company that mainly work with websites. We work certanly for the progression of country tourism sphere.<br>
+            Publishing hotels and restaurants is free. The company is developing. It belongs to mr. <b>Alimov Kamoliddin</b> - student<br>
+            of "<b>Lyceum for gifted students</b>" in <b>Bokhtar city</b>. We will update information and add new ones as soon as we can.</p>
 
 		</article>
                <br>
 
 		<article align="center">
 
-        <p><b>Note:</b> We want to be Please contact us if you want to...<br>
-        * Publish or update your hotel, reataurant information   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>   
-        * Publish your announcements  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                              <br>
-        * Tell us about website problems(technical & grammatical)      <br>
-        * etc...                                                         <br>
+        <p><b>Note:</b> We want you to be contact us for...<br>
+        * Publish or update your hotel, reataurant information   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+        * Publish your announcements  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                              <br>
+        * Tell us about website mistakes(technical, grammatical & wrong information)      <br>
+        * etc...    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                                                     <br>
         </p>
 
                     <h3>Contact us!</h3>
@@ -129,6 +130,12 @@ background-color:silver;
                 <td><h5>kulob-service@mail.ru</h5></td>
                 </tr>
                 </table>
+                <div align="center">
+                <form action="MAILTO:comp_project@mail.ru">
+                <input type="submit" value="Contact now">
+                </form>
+                </div>
+
 		</article>
 
 
