--- a/portfoliotj.html
+++ b/portfoliotj.html
@@ -59,17 +59,17 @@ background-color:gray;
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="hotel.html">Hotel</a></li>
-          <li><a href="resta.html">Restaurant</a></li>
-          <li><a href="sight.html">Sight</a></li>
+          <li><a href="indextj.html">Асосӣ</a></li>
+          <li><a href="hoteltj.html">Меҳмонхона</a></li>
+          <li><a href="restatj.html">Чойхона</a></li>
+          <li><a href="sighttj.html">Ҷойҳои тамошобоб</a></li>
           <li><a href="mp_company.html">MP Conpany</a></li>
 
 
-              <li class="menu-has-children"><a href="#">Language</a>
+              <li class="menu-has-children"><a href="#">Забон</a>
                 <ul>
-                  <li id="eng"><a href="#">English</a></li>
-                  <li><a href="portfoliotj.html">Тоҷикӣ</a></li>
+                  <li><a href="portfolio.html">English</a></li>
+				  <li id="eng"><a href="#">Тоҷикӣ</a></li>
                 </ul>
               </li>
               </ul>
@@ -87,17 +87,17 @@ background-color:gray;
         <br><br><br>
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Portfolio</h3>
-          <p class="section-description">Here are most popular places.</p>
+          <h3 class="section-title">Портфолио</h3>
+          <p class="section-description">Дар инҷо ҳама мавқеҳо ҷой шудаанд.</p>
         </div>
         <div class="row">
 
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter=".filter-hotel, .filter-resta, .filter-sight" class="filter-active">All</li>
-              <li data-filter=".filter-hotel">Hotel</li>
-              <li data-filter=".filter-resta">Restaraunt</li>
-              <li data-filter=".filter-sight">Sight</li>
+              <li data-filter=".filter-hotel, .filter-resta, .filter-sight" class="filter-active">Ҳама</li>
+              <li data-filter=".filter-hotel">Меҳмонхона</li>
+              <li data-filter=".filter-resta">Чойхона</li>
+              <li data-filter=".filter-sight">Ҷойҳои тамошобоб</li>
             </ul>
           </div>
         </div>
@@ -107,8 +107,8 @@ background-color:gray;
             <a href="hotel1.html">
               <img src="img/portfolio/hotel1.jpg" alt="">
               <div class="details">
-                <h4>Hotel Pomir</h4>
-                <span>1st May-street, Kulob.</span>
+                <h4>Меҳмонхонаи Помир</h4>
+                <span>Маҳаллаи 1-уми Май, Кӯлоб.</span>
               </div>
             </a>
           </div>
@@ -117,8 +117,8 @@ background-color:gray;
             <a href="hotel4.html">
               <img src="img/portfolio/hotel4.jpg" alt="">
               <div class="details">
-                <h4>Hotel Bobojon</h4>
-                <span>Sh. Shohin street, Kulob.</span>
+                <h4>Меҳмонхонаи Бобоҷон</h4>
+                <span>Кӯчаи Ш. Шоҳин, Кӯлоб.</span>
               </div>
             </a>
           </div>
@@ -127,8 +127,8 @@ background-color:gray;
             <a href="hotel6.html">
               <img src="img/portfolio/hotel6.jpg" alt="">
               <div class="details">
-                <h4>Hotel Dorro</h4>
-                <span>Dusti street, Kulob.</span>
+                <h4>Меҳмонхонаи Дорро</h4>
+                <span>Кӯчаи Дӯстӣ, Кӯлоб.</span>
               </div>
             </a>
           </div>
@@ -137,8 +137,8 @@ background-color:gray;
             <a href="guest1.html">
               <img src="img/portfolio/guest1.jpg" alt="">
               <div class="details">
-                <h4>MMK-ATAC</h4>
-                <span>Jabor Rasulov street, Kulob.</span>
+                <h4>Гестхаус MMK-ATAC</h4>
+                <span>Кӯчаи Ҷ. Расулов, хонаи 105, Кӯлоб.</span>
               </div>
             </a>
           </div>
@@ -146,8 +146,8 @@ background-color:gray;
             <a href="hotel5.html">
               <img src="img/portfolio/hotel5.jpg" alt="">
               <div class="details">
-                <h4>Hotel Kulob</h4>
-                <span>Nazar Khudoyorov7 street, Kulob.</span>
+                <h4>Меҳмонхонаи Кӯлоб</h4>
+                <span>Назар Худоёров 7, Кӯлоб.</span>
               </div>
             </a>
           </div>
@@ -156,8 +156,8 @@ background-color:gray;
             <a href="resta1.html">
               <img src="img/portfolio/resta1.jpg" alt="">
               <div class="details">
-                <h4>Istaravshan</h4>
-                <span></span>
+                <h4>Истаравшан</h4>
+                <span>Чойхона</span>
               </div>
             </a>
           </div>
@@ -166,8 +166,8 @@ background-color:gray;
             <a href="sight1.html">
               <img src="img/portfolio/sight1.jpg" alt="">
               <div class="details">
-                <h4>Mir Said Ali Hamadony's Mausaleum</h4>
-                <span></span>
+                <h4>Оромгоҳи Мир Саид Алии Ҳамадонӣ</h4>
+                <span>Ҷойҳои тамошобоб</span>
               </div>
             </a>
           </div>
@@ -176,8 +176,8 @@ background-color:gray;
             <a href="hotel2.html">
               <img src="img/portfolio/hotel2.jpg" alt="">
               <div class="details">
-                <h4>Hotel Makhsus</h4>
-                <span>Borbad street, Kulob.</span>
+                <h4>Меҳмонхонаи Махсус</h4>
+                <span>Кӯчаи Борбад, Кӯлоб.</span>
               </div>
             </a>
           </div>
@@ -186,8 +186,8 @@ background-color:gray;
             <a href="hotel3.html">
               <img src="img/portfolio/hotel3.jpg" alt="">
               <div class="details">
-                <h4>Hotel Khatlon</h4>
-                <span>Ismoili Somoni street, Kulob.</span>
+                <h4>Меҳмонхонаи Хатлон</h4>
+                <span>Кӯчаи И. Сомонӣ, Кӯлоб.</span>
               </div>
             </a>
           </div>
