--- a/sight.html
+++ b/sight.html
@@ -60,15 +60,16 @@ background-color:gray;
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="mp_company.html">MP Conpany</a></li>  
+          <li><a href="hotel.html">Hotel</a></li>
+          <li><a href="resta.html">Restaurant</a></li>
+          <li class="menu-active"><a href="sight.html">Sight</a></li>
+          <li><a href="mp_company.html">MP Conpany</a></li>
 
 
               <li class="menu-has-children"><a href="#">Language</a>
                 <ul>
                   <li id="eng"><a href="#">English</a></li>
-                  <li><a href="#">Russian</a></li>
-                  <li><a href="#">Tajik</a></li>
+                  <li><a href="sighttj.html">Тоҷикӣ</a></li>
                 </ul>
               </li>
         </ul>
